# OwnSight

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LAYER2.md  PUBLISHING.md  PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  book.toml  rust-toolchain.toml
.github/workflows/: cli-release.yml  docs.yml  publish-crates.yml  release.yml
crates/ownsight-cli/: Cargo.toml
crates/ownsight-cli/src/: main.rs
crates/ownsight-cli/src/commands/: analyze.rs
crates/ownsight-cli/src/output/: mod.rs  text.rs  timeline.rs
crates/ownsight-core/: Cargo.toml
crates/ownsight-core/src/: analysis.rs  events.rs  graph.rs  lib.rs  model.rs
crates/ownsight-driver/: Cargo.toml
crates/ownsight-driver/src/: lib.rs  simple_analyzer.rs
crates/ownsight-mir/: Cargo.toml
crates/ownsight-mir/src/: analyzer.rs  async_await.rs  closure.rs  driver.rs  function.rs  lib.rs  lifetime.rs  mir_visitor.rs  partial_move.rs
crates/ownsight-mir/tests/: async_tests.rs  closure_tests.rs  integration_tests.rs  partial_move_tests.rs
docs/src/: README.md  SUMMARY.md  contributing.md  installation.md  quickstart.md  troubleshooting-mir.md  troubleshooting.md
docs/src/development/: architecture.md  layer2.md
docs/src/reference/: configuration.md  events.md
docs/src/usage/: backends.md  basic.md  cli.md  desktop.md  examples.md  layer2.md
docs/theme/: custom.css
examples/: layer2_test.rs
scripts/: prepare-release.sh  publish-cli.sh
tests/snapshots/: borrow_example.rs  mut_borrow.rs  simple_move.rs
ui/: index.html  package.json
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: create_icons.sh  generate-icons.sh  icon.icns
ui/src-tauri/src/: commands.rs  main.rs
ui/src/components/: BackendStatus.tsx  GraphView.tsx  QueryPanel.tsx  SourceView.tsx  StepController.tsx  TimelineView.tsx
ui/src/types/: index.ts
