[workspace]
resolver = "2"
members = [
    "crates/ownsight-core",
    "crates/ownsight-driver",
    "crates/ownsight-cli", "crates/ownsight-mir",
]
exclude = [
    "ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ownsight Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dedsecrattle/ownsight"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
