[package]
name = "ownsight-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = "1.34"
