[package]
name = "ownsight-core"
version = "0.1.0"
edition = "2021"
description = "Core analysis engine for Rust ownership and borrowing visualization"
authors = ["Ownsight Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ownsight"
homepage = "https://github.com/yourusername/ownsight"
documentation = "https://docs.rs/ownsight-core"
keywords = ["rust", "ownership", "borrow-checker", "visualization", "analysis"]
categories = ["development-tools", "visualization"]
readme = "../../README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
petgraph.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = "1.34"
