[package]
name = "ownsight-mir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MIR-based ownership analysis using rustc internals"
keywords = ["rust", "mir", "ownership", "compiler", "analysis"]
categories = ["development-tools"]

[dependencies]
ownsight-core = { version = "0.1.0", path = "../ownsight-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
rustc = []  # Enable rustc internals support (requires nightly + rustc-dev component)
